syntax = "proto3";

// import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package="./aclx";

package proto;

service Aclx {
	rpc AclxHealthCheck(AclxHealthCheckRequest) returns (AclxHealthCheckResponse);
}

service UserService {
	rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
}

service RoleService {
	rpc EnsureRoleExist(EnsureRoleExistRequest) returns (EnsureRoleExistResponse);
}

message AclxBaseResponse {
	int32 code = 1;
	string message = 2;
}

message AclxHealthCheckRequest {
	string service = 1;
}

message AclxHealthCheckResponse {
	enum AclxServiceStatus{
		UNKNOWN = 0;
		SERVING = 1;
		NOT_SERVING = 2;
		SERVICE_UNKNOWN = 3;
	}
	AclxServiceStatus status = 1;
}

message UserLoginRequest {
	string loginType = 1;	  // 登录类型,当前只支持sso类型
    string tenantId = 2;      // 租户id
    string username = 3;      // 用户名
    string password = 4;      // 密码
	string app = 5;           // app
}

message UserLoginResult {
	AccountProfile account_profile = 1;
	// 角色列表
	repeated string roles = 2;  
	// access token
	string accessToken = 3;  
	// refresh token
	string refreshToken = 4;  
	// 过期时间
	google.protobuf.Timestamp expires = 5;
}

message UserLoginResponse {
	UserLoginResult result = 1;		// 登录结果
}

message AccountProfile {
	string userId = 1;			// 用户id
	string username = 2;  		// 用户名
	string displayName = 3;    	// 显示名称
	string currentTenantId = 4; // 当前租户id
	string phone = 5;			// phone
	string email = 6;			// email
	bool emailVerified =7;		// emial是否已经校验
	string avatar = 8;			// 头像
}

message RoleInfo {
	string name = 1;
	string displayName = 2;
	string description = 3;	
	bool isSystemRole = 4;		// 是否是系统角色	
	bool isEnabled = 5;			// 是否已启用
	repeated string users = 6; 	// 存储的是用户的username数组
	repeated string roles = 7; 	// 包含的子角色名称
}

message EnsureRoleExistRequest {
	string tenantId = 1;	//租户id
	RoleInfo role = 2;
}

message EnsureRoleExistResponse {
	bool successful = 1;
}